[tool.poetry]
name = "geo_py_utils"
version = "0.3.1"
description = "Python functions for generic geospatial manipulations"
authors = ["Charles Gauvin"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts =  "-v -m 'not requires_local_pg_connection and not requires_local_docker_pg_connection and not requires_remote_pg_connection' "
markers =[
    "requires_local_pg_connection: requires a local postgis db set up.",
    "requires_local_docker_pg_connection: requires a running docker container with postgis DB accepting connections on 80:5432.",
    "requires_remote_pg_connection: requires a remote postgis db set up accepting connections on 5052"
    ]