[tool.poetry]
name = "geo_py_utils"
version = "0.11.2"
description = "Python functions for generic geospatial manipulations"
authors = ["Charles Gauvin"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts =  "-v -m 'not requires_local_pg_connection and not requires_local_docker_pg_connection and not requires_remote_pg_connection_prod and not requires_remote_pg_connection_dev and not requires_remote_pg_connection_sfkl_interactivity' "
markers =[
    "requires_local_pg_connection: requires a local postgis db set up.",
    "requires_local_docker_pg_connection: requires a running docker container with postgis DB accepting connections on 80:5432.",
    "requires_remote_pg_connection_prod: requires a remote postgis db set up accepting connections on scoring:5052",
    "requires_remote_pg_connection_dev: requires a remote postgis db set up accepting connections on training:5053",
    "requires_remote_pg_connection_sfkl_interactivity:  requires a remote postgis db + sfkl interactive external browser auth USE `-s`  ",
    "requires_or2ogr: requires a working gdal and ogr2ogr executable which can be found"
    ]

[tool.flake8]
    max-complexity = 10
    max-line-length = 100
    extend-ignore = """
        E128,
        E303,
        E251,
        W291
    """

[tool.poetry.dependencies] 
brotlipy = "^0.7.0"
psycopg2 = "^2.9.5"
pyarrow = "^11.0.0"
pyopenssl = "^23.0.0"
pysocks = "^1.7.1"
rtree = "*"
unicodedata2 = "^15.0.0"
python-geohash = "^0.8.5"
sqlalchemy = "^1.4.46"
snowflake-connector-python = "3.0.1"
geopandas = "*"
pyproj = '3.4.1'
seaborn = {version ="^0.12.1", optional = true}
matplotlib = {version ="^3.6.2", optional = true}
folium = {version ="^0.13.0", optional = true}
mapclassify = {version ="^2.4.3", optional = true}
contextily = {version ="^1.3.0", optional = true}
xyzservices = {version ="^2022.9.0", optional = true}
pytest = {version = "^5.2", optional = true}
flake8 = {version = "^6.0.0", optional = true}

[tool.poetry.extras]
notebooks=["seaborn" , "matplotlib", "folium", "mapclassify", "contextily", "xyzservices"]
dev=['pytest','flake8']

